--- a/lessons/CRISP_DM/Imputing Values.ipynb
+++ b/lessons/CRISP_DM/Imputing Values.ipynb
@@ -15,9 +15,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mxagar/opt/anaconda3/envs/ds/lib/python3.7/site-packages/sklearn/linear_model/_base.py:145: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+      "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+      "\n",
+      "from sklearn.pipeline import make_pipeline\n",
+      "\n",
+      "model = make_pipeline(StandardScaler(with_mean=False), LinearRegression())\n",
+      "\n",
+      "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+      "\n",
+      "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+      "model.fit(X, y, **kwargs)\n",
+      "\n",
+      "\n",
+      "  FutureWarning,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The r-squared score for your model was 0.019170661803761924 on 645 values.'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -64,13 +95,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>CareerSatisfaction</th>\n",
+       "      <th>HoursPerWeek</th>\n",
+       "      <th>JobSatisfaction</th>\n",
+       "      <th>StackOverflowSatisfaction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>113750.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>130000.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>82500.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>100764.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Salary  CareerSatisfaction  HoursPerWeek  JobSatisfaction  \\\n",
+       "2   113750.0                 8.0           NaN              9.0   \n",
+       "14  100000.0                 8.0           NaN              8.0   \n",
+       "17  130000.0                 9.0           NaN              8.0   \n",
+       "18   82500.0                 5.0           NaN              3.0   \n",
+       "22  100764.0                 8.0           NaN              9.0   \n",
+       "\n",
+       "    StackOverflowSatisfaction  \n",
+       "2                         8.0  \n",
+       "14                        8.0  \n",
+       "17                        8.0  \n",
+       "18                        NaN  \n",
+       "22                        8.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "drop_sal_df = #Drop the rows with missing salaries\n",
+    "drop_sal_df = num_vars.dropna(axis=0,subset=['Salary']) #Drop the rows with missing salaries\n",
     "\n",
     "# test look\n",
     "drop_sal_df.head()"
@@ -78,11 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice job! That looks right!\n"
+     ]
+    }
+   ],
    "source": [
     "#Check that you dropped all the rows that have salary missing\n",
     "t.check_sal_dropped(drop_sal_df)"
@@ -90,13 +223,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>CareerSatisfaction</th>\n",
+       "      <th>HoursPerWeek</th>\n",
+       "      <th>JobSatisfaction</th>\n",
+       "      <th>StackOverflowSatisfaction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>113750.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.447415</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.447415</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>130000.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.447415</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>82500.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.447415</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.442686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>100764.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.447415</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Salary  CareerSatisfaction  HoursPerWeek  JobSatisfaction  \\\n",
+       "2   113750.0                 8.0      2.447415              9.0   \n",
+       "14  100000.0                 8.0      2.447415              8.0   \n",
+       "17  130000.0                 9.0      2.447415              8.0   \n",
+       "18   82500.0                 5.0      2.447415              3.0   \n",
+       "22  100764.0                 8.0      2.447415              9.0   \n",
+       "\n",
+       "    StackOverflowSatisfaction  \n",
+       "2                    8.000000  \n",
+       "14                   8.000000  \n",
+       "17                   8.000000  \n",
+       "18                   8.442686  \n",
+       "22                   8.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fill_df = #Fill all missing values with the mean of the column.\n",
+    "fill_df = drop_sal_df.fillna(drop_sal_df.mean()) # Fill all missing values with the mean of the column.\n",
     "\n",
     "# test look\n",
     "fill_df.head()"
@@ -104,11 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice job! That looks right!\n"
+     ]
+    }
+   ],
    "source": [
     "#Check your salary dropped, mean imputed datafram matches the solution\n",
     "t.check_fill_df(fill_df)"
@@ -134,32 +369,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mxagar/opt/anaconda3/envs/ds/lib/python3.7/site-packages/sklearn/linear_model/_base.py:145: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+      "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+      "\n",
+      "from sklearn.pipeline import make_pipeline\n",
+      "\n",
+      "model = make_pipeline(StandardScaler(with_mean=False), LinearRegression())\n",
+      "\n",
+      "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+      "\n",
+      "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+      "model.fit(X, y, **kwargs)\n",
+      "\n",
+      "\n",
+      "  FutureWarning,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The r-squared score for your model was 0.03257139063404435 on 1503 values.'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Split into explanatory and response variables\n",
+    "X = fill_df[['CareerSatisfaction', 'HoursPerWeek', 'JobSatisfaction', 'StackOverflowSatisfaction']]\n",
+    "y = fill_df['Salary']\n",
     "\n",
     "#Split into train and test\n",
-    "       \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .30, random_state=42) \n",
+    "\n",
+    "lm_model = LinearRegression(normalize=True) # Instantiate\n",
+    "lm_model.fit(X_train, y_train) #Fit\n",
+    "    \n",
     "#Predict and score the model\n",
+    "y_test_preds = lm_model.predict(X_test) \n",
     "\n",
     "#Rsquared and y_test\n",
-    "rsquared_score = #r2_score\n",
-    "length_y_test = #num in y_test\n",
+    "rsquared_score = r2_score(y_test, y_test_preds) #r2_score\n",
+    "length_y_test = len(y_test_preds) #num in y_test\n",
     "\n",
     "\"The r-squared score for your model was {} on {} values.\".format(rsquared_score, length_y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice job! That looks right!\n"
+     ]
+    }
+   ],
    "source": [
     "# Pass your r2_score, length of y_test to the below to check against the solution\n",
     "t.r2_y_test_check(rsquared_score, length_y_test)"
@@ -176,15 +457,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -198,9 +489,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
