--- a/lessons/CRISP_DM/Categorical Variables.ipynb
+++ b/lessons/CRISP_DM/Categorical Variables.ipynb
@@ -22,11 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 267,
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -53,7 +61,7 @@
        "'The r-squared score for the model using only quantitative variables was 0.03257139063404435 on 1503 values.'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,9 +76,10 @@
     "import test1 as t\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "df = pd.read_csv('./survey_results_public.csv')\n",
-    "df.head()\n",
     "\n",
     "#Only use quant variables and drop any rows with missing values\n",
     "num_vars = df[['Salary', 'CareerSatisfaction', 'HoursPerWeek', 'JobSatisfaction', 'StackOverflowSatisfaction']]\n",
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 268,
    "metadata": {
     "tags": []
    },
@@ -120,7 +129,7 @@
        "147"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 269,
    "metadata": {
     "tags": []
    },
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 270,
    "metadata": {
     "tags": []
    },
@@ -174,7 +183,7 @@
        "6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 271,
    "metadata": {
     "tags": []
    },
@@ -197,7 +206,7 @@
        "49"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 272,
    "metadata": {
     "tags": []
    },
@@ -220,7 +229,7 @@
        "13"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 273,
    "metadata": {
     "tags": []
    },
@@ -274,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 274,
    "metadata": {
     "tags": []
    },
@@ -361,7 +370,7 @@
        "7  NaN   8.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 275,
    "metadata": {
     "tags": []
    },
@@ -463,7 +472,7 @@
        "7  0  0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,21 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 276,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'How many new dummy columns do you get when creating dummy variables?'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/06/wdqtkk796gjfxfq9063zphx40000gn/T/ipykernel_10335/223375090.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Check your dictionary against the solution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msol_3_dict_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol_3_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/nexo/git_repositories/cd0017-introduction-to-data-science/lessons/CRISP_DM/test1.py\u001b[0m in \u001b[0;36msol_3_dict_check\u001b[0;34m(sol_3_dict)\u001b[0m\n\u001b[1;32m    558\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0msol_3_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Which column should you create a dummy variable for?'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msol_3_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Which column should you create a dummy variable for?'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    559\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Oops! That is not the column you should be using to create a dummy variable. Try again.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 560\u001b[0;31m     \u001b[0;32melif\u001b[0m \u001b[0msol_3_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'How many new dummy columns do you get when creating dummy variables?'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msol_3_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'How many new dummy columns do you get when creating dummy variables?'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    561\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Oops! Though you could get that number of dummy variables, that is not what you get using the default setting using one hot encoding or pandas `get_dummies` encoding. Try again.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    562\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0msol_3_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'What happens with the nan values?'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msol_3_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'What happens with the nan values?'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'How many new dummy columns do you get when creating dummy variables?'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice job! That looks right to me!\n"
      ]
     }
    ],
@@ -504,7 +508,7 @@
     "\n",
     "sol_3_dict = {'Which column should you create a dummy variable for?': d,\n",
     "              'When you use the default settings for creating dummy variables, how many are created?': b,\n",
-    "              'What happens with the nan values?': f \n",
+    "              'What happens with the nan values?': g \n",
     "             }\n",
     "\n",
     "# Check your dictionary against the solution\n",
@@ -524,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 277,
    "metadata": {
     "tags": []
    },
@@ -620,7 +624,7 @@
        "7  0  0    1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 278,
    "metadata": {
     "tags": []
    },
@@ -665,12 +669,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19102, 154)"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -694,25 +715,130 @@
     "            4. if dummy_na is True - it also contains dummy columns for the NaN values\n",
     "            5. Use a prefix of the column name with an underscore (_) for separating \n",
     "    '''\n",
-    "\n",
-    "    return df"
+    "    for col in  cat_cols:\n",
+    "        try:\n",
+    "            # for each cat add dummy var, drop original column\n",
+    "            df = pd.concat([df.drop(col, axis=1), pd.get_dummies(df[col], prefix=col, prefix_sep='_', drop_first=True, dummy_na=dummy_na)], axis=1)\n",
+    "        except:\n",
+    "            continue\n",
+    "    return df    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5009, 11938)\n"
+     ]
+    }
+   ],
    "source": [
+    "#Dropping where the salary has missing values\n",
+    "df  = df.dropna(subset=['Salary'], axis=0)\n",
+    "\n",
+    "#Pull a list of the column names of the categorical variables\n",
+    "cat_df = df.select_dtypes(include=['object'])\n",
+    "cat_cols_lst = cat_df.columns\n",
+    "\n",
     "df_new = create_dummy_df(df, cat_cols_lst, dummy_na=False) #Use your newly created function\n",
     "\n",
-    "# Show shape to assure it has a shape of (5009, 11938)\n",
+    "# Show a header of df_new to check\n",
     "print(df_new.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Professional', 'ProgramHobby', 'Country', 'University',\n",
+       "       'EmploymentStatus', 'FormalEducation', 'MajorUndergrad', 'HomeRemote',\n",
+       "       'CompanySize', 'CompanyType',\n",
+       "       ...\n",
+       "       'StackOverflowBetter', 'StackOverflowWhatDo', 'StackOverflowMakeMoney',\n",
+       "       'Gender', 'HighestEducationParents', 'Race', 'SurveyLong',\n",
+       "       'QuestionsInteresting', 'QuestionsConfusing', 'InterestedAnswers'],\n",
+       "      dtype='object', length=147)"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Respondent',\n",
+       " 'CareerSatisfaction',\n",
+       " 'JobSatisfaction',\n",
+       " 'HoursPerWeek',\n",
+       " 'StackOverflowSatisfaction',\n",
+       " 'Salary',\n",
+       " 'ExpectedSalary']"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_cols = [col for col in df.columns if col not in cat_cols_lst]\n",
+    "num_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cols.remove('Salary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Respondent',\n",
+       " 'CareerSatisfaction',\n",
+       " 'JobSatisfaction',\n",
+       " 'HoursPerWeek',\n",
+       " 'StackOverflowSatisfaction',\n",
+       " 'ExpectedSalary']"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_cols"
    ]
   },
   {
@@ -726,14 +852,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "df['ExpectedSalary'].isna().sum()/df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    0.0\n",
+       "mean     NaN\n",
+       "std      NaN\n",
+       "min      NaN\n",
+       "25%      NaN\n",
+       "50%      NaN\n",
+       "75%      NaN\n",
+       "max      NaN\n",
+       "Name: ExpectedSalary, dtype: float64"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ExpectedSalary'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mxagar/opt/anaconda3/envs/ds/lib/python3.7/site-packages/sklearn/linear_model/_base.py:145: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+      "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+      "\n",
+      "from sklearn.pipeline import make_pipeline\n",
+      "\n",
+      "model = make_pipeline(StandardScaler(with_mean=False), LinearRegression())\n",
+      "\n",
+      "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+      "\n",
+      "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+      "model.fit(X, y, **kwargs)\n",
+      "\n",
+      "\n",
+      "  FutureWarning,\n"
+     ]
+    }
+   ],
    "source": [
     "def clean_fit_linear_mod(df, response_col, cat_cols, dummy_na, test_size=.3, rand_state=42):\n",
     "    '''\n",
@@ -763,6 +955,37 @@
     "    9. Predict the response for the training data and the test data\n",
     "    10. Obtain an rsquared value for both the training and test data\n",
     "    '''\n",
+    "    #Drop the rows with missing response values\n",
+    "    df  = df.dropna(subset=[response_col], axis=0)\n",
+    "\n",
+    "    #Drop columns with all NaN values\n",
+    "    df = df.dropna(how='all', axis=1)\n",
+    "\n",
+    "    #Dummy categorical variables\n",
+    "    df = create_dummy_df(df, cat_cols, dummy_na)\n",
+    "\n",
+    "    # Mean function\n",
+    "    fill_mean = lambda col: col.fillna(col.mean())\n",
+    "    # Fill the mean\n",
+    "    df = df.apply(fill_mean, axis=0)\n",
+    "\n",
+    "    #Split into explanatory and response variables\n",
+    "    X = df.drop(response_col, axis=1)\n",
+    "    y = df[response_col]\n",
+    "\n",
+    "    #Split into train and test\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=rand_state)\n",
+    "\n",
+    "    lm_model = LinearRegression(normalize=True) # Instantiate\n",
+    "    lm_model.fit(X_train, y_train) #Fit\n",
+    "\n",
+    "    #Predict using your model\n",
+    "    y_test_preds = lm_model.predict(X_test)\n",
+    "    y_train_preds = lm_model.predict(X_train)\n",
+    "\n",
+    "    #Score using your model\n",
+    "    test_score = r2_score(y_test, y_test_preds)\n",
+    "    train_score = r2_score(y_train, y_train_preds)\n",
     "\n",
     "    return test_score, train_score, lm_model, X_train, X_test, y_train, y_test\n",
     "\n",
@@ -773,14 +996,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 289,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The rsquared on the training data was 1.0.  The rsquared on the test data was 0.4533340635925016.\n"
+     ]
+    }
+   ],
    "source": [
     "#Print training and testing score\n",
     "print(\"The rsquared on the training data was {}.  The rsquared on the test data was {}.\".format(train_score, test_score))"
